//#service-request-reply
syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.helloworld";
option java_outer_classname = "EventProto";

// The greeting service definition.
service EventStreamService {
    // Sends a greeting
    rpc getEvent (FilterRequest) returns (EventResponse) {}
    //#service-request-reply
    //#service-stream
    // The stream of incoming HelloRequest messages are
    // sent out as corresponding HelloReply. From
    // all clients to all clients, like a chat room.
    rpc getFilterEvent (FilterRequest) returns (stream EventResponse) {}
    //#service-stream
    //#service-request-reply
}

// The request message containing the user's name.
message FilterRequest {
    string filterCity = 1;
    string filterName = 2;
    int32 filterCost = 3;
    int32 throttle = 4;
    string dir = 5;
}

// The response message containing the greetings
message EventResponse {
    string id = 1;
    UserResponse event = 2;
    WeatherResponse weather = 3;
}

message UserResponse {
    int32 cost = 1;
    string desc = 2;
    int64 time = 3;
    string userName = 4;
    string itemName = 5;
}

message WeatherResponse {
    int64 id = 1;
    string main = 2;
    string  desc = 3;
}
//#service-request-reply
